# VoxelGameEngine

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  agents.md  flake.nix
.github/workflows/: ci.yml  docs-pages.yml  main-build-release.yml  nix.yml  pull-request.yml
apps/editor/: Cargo.toml
apps/editor/src/: config.rs  editor_state.rs  embedded.rs  launcher.rs  main.rs  model.rs  preferences_window.rs  ui.rs
apps/editor/src/engine_runner/: ipc.rs  mod.rs
apps/engine-runner/: Cargo.toml
apps/engine-runner/src/: ipc.rs  main.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs
crates/ecs/: Cargo.toml
crates/ecs/src/: lib.rs
crates/engine-core/: Cargo.toml
crates/engine-core/src/: lib.rs
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs
crates/meshing/: Cargo.toml
crates/meshing/src/: dual_contouring.rs  lib.rs
crates/meshing/src/marching_cubes/: mod.rs  tables.rs
crates/physics/: Cargo.toml
crates/physics/src/: lib.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs
crates/render-vulkan/: Cargo.toml  build.rs
crates/render-vulkan/shaders/: mesh.wgsl
crates/render-vulkan/src/: lib.rs
crates/scene/: Cargo.toml
crates/scene/src/: level.rs  lib.rs  prefabs.rs  project.rs
crates/scripting/: Cargo.toml
crates/scripting/src/: hooks.rs  lib.rs
crates/voxel/: Cargo.toml
crates/voxel/src/: lib.rs  svo.rs
docs/source/: CNAME  conf.py  editor.rst  index.rst  prefabs.rst  projects.rst  scripting.rst
nix/: overlay.nix  package.nix
scripts/: default_game.lua  run-editor.ps1  run-editor.sh
shared/formats/: Cargo.toml
shared/formats/src/: lib.rs
shared/protocol/: Cargo.toml
shared/protocol/src/: lib.rs
