[package]
name = "editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "editor"
path = "src/main.rs"

[dependencies]
protocol = { path = "../../shared/protocol" }
scene = { path = "../../crates/scene" }
logging = { path = "../../crates/logging" }
tracing.workspace = true
eframe = "0.30"
