[package]
name = "engine-runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "engine-runner"
path = "src/main.rs"

[dependencies]
engine-core = { path = "../../crates/engine-core" }
logging = { path = "../../crates/logging" }
platform = { path = "../../crates/platform" }
render-vulkan = { path = "../../crates/render-vulkan" }
protocol = { path = "../../shared/protocol" }
winit.workspace = true
glam.workspace = true
tracing.workspace = true
ash.workspace = true
