[package]
name = "scene"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Prefab catalog and serializable level/scene documents for editor and engine"

[dependencies]
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
thiserror.workspace = true

[dev-dependencies]
uuid.workspace = true
