[package]
name = "scripting"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ecs = { path = "../ecs" }
scene = { path = "../scene" }
glam.workspace = true
mlua.workspace = true
notify.workspace = true
tracing.workspace = true
thiserror.workspace = true
